# TextClean

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md
src/textclean/: __init__.py  config.py  core.py  pipeline.py  utils.py
tests/: test_core.py
